<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:greendroid="http://schemas.android.com/apk/res/com.syrinxoon.mtaccouncenter"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_weight="0.9"
		android:weightSum="1.0">
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/add_account_title">
		</TextView>
		
		<EditText
			android:id="@+id/account_name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:hint="@string/account_name_hint">
		</EditText>
	
		<EditText
			android:id="@+id/account_api_key"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:maxLength="65"
			android:hint="@string/account_api_key_hint">
		</EditText>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:background="@android:drawable/bottom_bar"
		android:paddingTop="4dp">

		<Button
			android:id="@+id/add_account_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/add_account_button" />

	</LinearLayout>	
	
</LinearLayout>